debugging; clean up

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 - [ ] Create logo
 - [ ] Enable feeding external JSON files
 - [ ] Explain how to add and update definitions
-- [ ] 
+- [ ] UV publish for Pypi test and main
+- [ ] Explain how to debug
