--- a/tests/validation_report.ipynb
+++ b/tests/validation_report.ipynb
@@ -20,12 +20,23 @@
     "# Local application imports\n",
     "import _match\n",
     "import _report\n",
-    "from abcount import ABCounter\n",
+    "from abcount import ABCounter, _definitions\n",
     "from validation import run_validation\n",
     "\n",
     "# Initialization code\n",
     "load_dotenv()\n",
     "PandasTools.RenderImagesInAllDataFrames(images=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3ec3617",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recreate definitions before running the validation\n",
+    "_definitions.process_raw_definitions()"
    ]
   },
   {
